--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amr Khairy - CV</title>
+    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -26,6 +29,9 @@
             background-color: #343a40;
             color: white;
         }
+        .social-icons a {
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -34,10 +40,11 @@
         <header class="text-center">
             <h1>Amr Khairy</h1>
             <p>Cairo, Egypt | +201127165868 | <a href="mailto:Amr.khairy20@gmail.com">Amr.khairy20@gmail.com</a></p>
-            <p><a href="https://github.com/Amr-mohamed10" class="btn btn-dark">GitHub</a> 
-               <a href="https://www.kaggle.com/amrkhairy" class="btn btn-info">Kaggle</a> 
-               <a href="https://public.tableau.com/app/profile/amr.mohamed7950" class="btn btn-primary">Tableau</a>
-            </p>
+            <div class="social-icons">
+                <a href="https://github.com/Amr-mohamed10" class="btn btn-dark"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://www.kaggle.com/amrkhairy" class="btn btn-info"><i class="fab fa-kaggle"></i> Kaggle</a>
+                <a href="https://public.tableau.com/app/profile/amr.mohamed7950" class="btn btn-primary"><i class="fas fa-chart-bar"></i> Tableau</a>
+            </div>
         </header>
 
         <section class="mt-5">
