--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
         <!-- Work Experience Section -->
         <section class="resume-section">
             <h2 class="section-title">Work Experience</h2>
-            <h3>Signature Technology, Big Data & BI Analyst</h3>
+            <h3>Signature Technology, Data scientist & Big data Analyst</h3>
             <p><strong>Feb 2024 – Present</strong> | Remotely</p>
             <ul>
-                <li>Utilized MYSQL for data analysis, reducing inventory costs by 15% and increasing customer retention by 10%.</li>
-                <li>Developed Power BI & Tableau E-commerce dashboards.</li>
-                <li>Managed AWS Aurora, enhancing performance by 40% and reducing operational costs by 20%.</li>
+              <li>Managed AWS Aurora, enhancing performance by 40% and reducing operational costs by 20% through strategic optimizations.</li>
+              <li>Applied statistical analysis and data-driven insights.</li>
+              <li>Conducted A/B test to improve place order percentage.</li>
+              <li>Increased customer order placement from 20% to 60%.</li>
+              <li>Developed Power BI & Tableau E-commerce dashboards.</li>
             </ul>
-
+            
             <h3>Upwork, Data Science & Machine Learning Engineer</h3>
             <p><strong>Apr 2021 – Present</strong></p>
             <ul>
